update landing page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,115 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Keith Simpson</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Family Apps</title>
+  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <style>
+    /* General Page Styling */
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f0f4f8; /* Soft blue-grey background */
+      font-family: 'Poppins', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      color: #333;
+    }
+
+    /* Container for the content */
+    .container {
+      text-align: center;
+      max-width: 800px;
+      padding: 20px;
+    }
+
+    h1 {
+      margin-bottom: 40px;
+      color: #2c3e50;
+      font-size: 2.5rem;
+    }
+
+    /* Grid Layout for the Cards */
+    .app-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    /* The Clickable Card Styling */
+    .app-card {
+      background: white;
+      border-radius: 15px;
+      width: 200px;
+      padding: 30px 20px;
+      text-decoration: none; /* Removes underline from links */
+      color: #333;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+
+    /* Hover Effects - Makes it pop when you mouse over */
+    .app-card:hover {
+      transform: translateY(-5px); /* Moves up slightly */
+      box-shadow: 0 10px 15px rgba(0,0,0,0.15);
+      background-color: #ffffff;
+    }
+
+    /* Icon Styling */
+    .app-card i {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    /* Specific Colors for Icons */
+    .icon-timer { color: #3498db; }  /* Blue */
+    .icon-food { color: #e67e22; }   /* Orange */
+    .icon-sun { color: #f1c40f; }    /* Yellow */
+
+    /* Text Styling inside card */
+    .app-card span {
+      font-weight: 600;
+      font-size: 1.1rem;
+    }
+
+  </style>
 </head>
 <body>
-  <a href="timer.html">Toothbrush Timer</a><br>
-  <a href="reverb.html">Toothbrush Timer</a><br>
-</html>
 
+  <div class="container">
+    <h1>Family Apps</h1>
+    
+    <div class="app-grid">
+      
+      <a href="timer.html" class="app-card">
+        <i class="fas fa-tooth icon-timer"></i>
+        <span>Toothbrush Timer</span>
+      </a>
+
+      <a href="meal_planner_v5.1.html" class="app-card">
+        <i class="fas fa-utensils icon-food"></i>
+        <span>Meal Planner</span>
+      </a>
+
+      <a href="morning.html" class="app-card">
+        <i class="fas fa-sun icon-sun"></i>
+        <span>Morning Routine</span>
+      </a>
+
+    </div>
+  </div>
+
+</body>
+</html>
