Add link to microtimer

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     .icon-timer { color: #3498db; }  /* Blue */
     .icon-food { color: #e67e22; }   /* Orange */
     .icon-sun { color: #f1c40f; }    /* Yellow */
+    .icon-stopwatch { color: #84ee5e; } /* green */ 
 
     /* Text Styling inside card */
     .app-card span {
@@ -106,6 +107,11 @@
       <a href="morning.html" class="app-card">
         <i class="fas fa-sun icon-sun"></i>
         <span>Morning Routine</span>
+      </a>
+
+      <a href="MicroTimer/index.html" class="app-card">
+        <i class="fas fa-stopwatch icon-stopwatch"></i>
+        <span>MicroTimer</span>
       </a>
 
     </div>
